--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,94 @@
-absl-py
-accelerate
-asttokens
-Bottleneck
-Brotli
-cachetools
-certifi
-charset-normalizer
-comm
-contourpy
-cycler
-debugpy
-decorator
-einops
-einops-exts
-exceptiongroup
-executing
-filelock
-fonttools
-fsspec
-grpcio
-h5py
-huggingface-hub
-idna
-importlib_metadata
-ipykernel
-ipython
-jedi
-Jinja2
-jupyter_client
-jupyter_core
-kiwisolver
-loguru
-Markdown
-MarkupSafe
-matplotlib
-matplotlib-inline
-mkl_fft
-mkl_random
-mkl-service
-mpmath
-nest_asyncio
-networkx
-numexpr
-numpy
-nvidia-ml-py
-nvitop
-opencv-python
-packaging
-pandas
-parso
-pexpect
-pickleshare
-pillow
-pip
-platformdirs
-prompt_toolkit
-protobuf
-psutil
-ptyprocess
-pure_eval
-Pygments
-pyparsing
-PySocks
-python-dateutil
-pytz
-PyYAML
-pyzmq
-regex
-requests
-safetensors
-sentencepiece
-setuptools
-six
-stack-data
-sympy
-tensorboard
-tensorboard_data_server
-termcolor
-tokenizers
-torch
-torchaudio
-torchvision
-tornado
-tqdm
-traitlets
-transformers
-triton
-typing_extensions
-tzdata
-urllib3
-wcwidth
-Werkzeug
-wheel
-zipp
+absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1705494584803/work
+accelerate==1.1.1
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+Bottleneck @ file:///croot/bottleneck_1731058641041/work
+Brotli @ file:///croot/brotli-split_1714483155106/work
+cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1733624221485/work
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1734380492396/work/certifi
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.3.1
+cycler==0.12.1
+debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1732236637678/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+einops==0.8.0
+einops-exts==0.0.4
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+filelock @ file:///work/perseverance-python-buildout/croot/filelock_1701733993137/work
+fonttools==4.55.0
+fsspec==2024.10.0
+grpcio @ file:///croot/grpc-split_1716834572340/work
+h5py==3.12.1
+huggingface-hub==0.26.2
+idna @ file:///croot/idna_1714398848350/work
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1729866374957/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1731317204262/work
+Jinja2 @ file:///croot/jinja2_1730902924303/work
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+kiwisolver==1.4.7
+loguru==0.7.2
+Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156458/work
+MarkupSafe @ file:///work/perseverance-python-buildout/croot/markupsafe_1707342994941/work
+matplotlib==3.9.3
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mkl-service==2.4.0
+mkl_fft @ file:///io/mkl313/mkl_fft_1730824109137/work
+mkl_random @ file:///io/mkl313/mkl_random_1730823916628/work
+mpmath @ file:///work/perseverance-python-buildout/croot/mpmath_1698864994882/work
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+networkx @ file:///croot/networkx_1717597493534/work
+numexpr @ file:///croot/numexpr_1730215937391/work
+numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp312-cp312-linux_x86_64.whl#sha256=1d700f51d8b4fa684d858c9e3b56b1656bc5c82b6b79ff08d4e3b491c430059f
+nvidia-ml-py @ file:///home/conda/feedstock_root/build_artifacts/nvidia-ml-py_1698947663801/work
+nvitop @ file:///home/conda/feedstock_root/build_artifacts/nvitop_1726070214134/work
+opencv-python==4.10.0.84
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1731802491770/work
+pandas @ file:///croot/pandas_1718308974269/work/dist/pandas-2.2.2-cp312-cp312-linux_x86_64.whl#sha256=92c518f7e09edd50b5caa5862636c51d6a29391803f3ada62f68aa52f27d8f92
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow @ file:///croot/pillow_1731594689713/work
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
+protobuf==4.25.3
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1729847057810/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+pyparsing==3.2.0
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1731919281354/work
+pytz @ file:///croot/pytz_1713974312559/work
+PyYAML @ file:///croot/pyyaml_1728657952215/work
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1728642254015/work
+regex==2024.11.6
+requests @ file:///croot/requests_1730999120400/work
+safetensors==0.4.5
+sentencepiece @ file:///home/conda/feedstock_root/build_artifacts/sentencepiece-split_1727549011264/work/python
+setuptools==75.1.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+sympy==1.13.1
+tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1727435705122/work/tensorboard-2.18.0-py3-none-any.whl#sha256=107ca4821745f73e2aefa02c50ff70a9b694f39f790b11e6f682f7d326745eab
+tensorboard_data_server @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-data-server_1728639726553/work/tensorboard_data_server-0.7.0-py3-none-manylinux2014_x86_64.whl#sha256=40d8fffc5c59ade011656e89f9bc9c90185efcd63ddc58bd4487293c02efb1ed
+termcolor @ file:///home/conda/feedstock_root/build_artifacts/termcolor_1733754631889/work
+tokenizers==0.20.3
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1724956131631/work
+tqdm==4.67.0
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+transformers==4.46.3
+triton==3.1.0
+typing_extensions @ file:///croot/typing_extensions_1715268824938/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
+urllib3 @ file:///croot/urllib3_1727769808118/work
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1731097436890/work
+wheel==0.44.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1731262100163/work
