--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mkl_fft==1.3.11
 mkl_random==1.2.8
-mkl-service==2.4.0
+mkl-service
 mpmath==1.3.0
 nest_asyncio==1.6.0
 networkx==3.2.1
